--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-media-upload": "^1.1.4",
+    "vue-uploader-files": "^0.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
