--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-media-upload": "^1.1.4",
-    "vue-uploader-files": "^0.1.7"
+    "vue-router": "^4.0.15",
+    "vue-uploader-files": "^0.1.7",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
